--- a/responsive.css
+++ b/responsive.css
@@ -12,11 +12,13 @@
 
 @media (min-width: 360px) and (max-width: 765px) {
   .menu-ham {
-    width: 150px;
-    height: 285px;
+    height: 100%;
+    width: 100%;
+    background-color: #000000ed;
   }
   .menu-ham ul {
-    gap: 25px;
+    padding-top: 85px;
+    gap: 51px;
   }
   .text-description {
     margin: 0 65px;
@@ -118,7 +120,8 @@
     flex-direction: column-reverse;
   }
   .aboutCards .card img{
-    align-self: center;
+    width: 70%;
+    height: 50%;
   }
   .aboutCards .card p {
     width: 85%;
